--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -23,6 +23,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/grey"
                 android:padding="10dp"
+                android:id="@+id/deviceParent"
                 >
 
                 <Switch
