--- a/app/src/main/res/layout/item_room2.xml
+++ b/app/src/main/res/layout/item_room2.xml
@@ -3,18 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardCornerRadius="5dp"
+
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/gradient_bg"
-            android:padding="10dp"
+            android:padding="5dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
+
+            android:id="@+id/roomParent"
+
 
             >
             <ImageView
@@ -47,6 +54,20 @@
                 app:layout_constraintTop_toBottomOf="@id/tvRoomName"
                 android:layout_marginLeft="15dp"
                 android:translationY="-5dp"/>
+
+            <ImageView
+                android:id="@+id/img_menu"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/baseline_three_dots"
+                android:tint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginRight="10dp"
+                />
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
