--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -124,6 +124,29 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
 
+                <TextView
+                    android:id="@+id/tvNoRoomsFound"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Rooms Found"
+                    app:layout_constraintTop_toBottomOf="@id/tvRoom"
+                    app:layout_constraintBottom_toTopOf="@id/tvDevice"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/tvNoDeviceFound"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Devices Found"
+                    app:layout_constraintTop_toBottomOf="@id/tvDevice"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone"/>
+
+
 
 
 
