--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -4,11 +4,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<!--    android:background="@drawable/gradient_bg"-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         >
 
         <androidx.cardview.widget.CardView
@@ -22,27 +25,33 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/gradient_bg">
+
+                android:id="@+id/roomParent"
+                android:foreground="?attr/selectableItemBackground"
+
+                >
                 <TextView
+                    android:id="@+id/tvRoomName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="BedRoom"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:fontFamily="@font/balooda2"
-                    android:textColor="@color/cream"
+                    android:textColor="@color/black"
                     android:layout_marginTop="5dp"
                     app:layout_constraintTop_toTopOf="parent"
                     android:textStyle="bold"/>
 
                 <ImageView
+                    android:id="@+id/imgRoom"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:src="@drawable/bed_solid_full"
                     android:padding="20dp"
-                    app:tint="@color/cream"
+                    app:tint="@color/lightBlack"
                     android:layout_marginTop="10dp"/>
 
 
