--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="cream">#F6EEE9</color>
     <color name="grey">#eceaeb</color>
     <color name="theme1">#ff7072</color>
+    <color name="theme2">#ff9362</color>
 </resources>
