--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -7,6 +7,7 @@
         android:startColor="#ff9362"
         android:endColor="@color/theme1"
         />
+    <corners android:radius="5dp"/>
 
 
 </shape>
