--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,33 +6,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".add.AddActivity"
-    android:background="@color/theme1">
+    android:background="@color/theme1"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/actionBar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        >
+
+        <ImageView
+            android:id="@+id/imgBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_arrow_back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/white"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvReason"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add New Room"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imgBack"
+            android:layout_marginLeft="15dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/balooda2"
+            android:textColor="@color/white"
+            />
+
+
+
+        <ImageView
+            android:id="@+id/btnAdd"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_check"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_corner_radius"
         android:padding="10dp"
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/actionBar"
+        android:layout_margin="5dp"
+        android:backgroundTint="@color/white"
         >
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvReason"
-        android:text="Add New Room: "/>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edLayName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name"
-        app:layout_constraintTop_toBottomOf="@+id/tvReason"
+        app:layout_constraintTop_toTopOf="parent"
+        app:boxStrokeColor="@color/theme1"
+        app:hintTextColor="@color/theme1"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:drawableStart="@drawable/baseline_alphabet"
+
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/theme2"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -44,11 +97,16 @@
             android:layout_height="wrap_content"
             android:hint="Device Type"
             app:layout_constraintTop_toBottomOf="@+id/edLayName"
+            app:boxStrokeColor="@color/theme2"
+            app:hintTextColor="@color/theme2"
             >
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edType"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:drawableStart="@drawable/baseline_device"
+                android:drawablePadding="10dp"
+                android:drawableTint="@color/theme1"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -60,11 +118,16 @@
         android:layout_height="wrap_content"
         android:hint="Turn On Command"
         app:layout_constraintTop_toBottomOf="@+id/edLayType"
+        app:boxStrokeColor="@color/theme1"
+        app:hintTextColor="@color/theme1"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edTurnOn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:drawableStart="@drawable/baseline_terminal"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/theme2"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,22 +139,44 @@
     android:layout_height="wrap_content"
     android:hint="Turn Off Command"
     app:layout_constraintTop_toBottomOf="@+id/edLayTurnOn"
+        app:boxStrokeColor="@color/theme2"
+        app:hintTextColor="@color/theme2"
         >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edTurnOff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:drawableStart="@drawable/baseline_terminal"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/theme1"
         />
+
+
 
     </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnAdd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cornerRadius="5dp"
-        app:layout_constraintTop_toBottomOf="@id/edLayTurnOff"
-        android:text="Add"/>
+        <TextView
+            android:id="@+id/tvSelectIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Icon"
+            android:fontFamily="@font/balooda2"
+            app:layout_constraintTop_toBottomOf="@id/edLayTurnOff"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/tvSelectIcon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/recyclerIcon"
+
+            />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
