--- a/app/src/main/res/layout/fragment_device.xml
+++ b/app/src/main/res/layout/fragment_device.xml
@@ -14,6 +14,8 @@
         android:text="Controller Status: Disconnected"
         android:fontFamily="@font/balooda2"
         android:textSize="18dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
