--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -35,7 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgBack"
             android:layout_marginLeft="15dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="@font/balooda2"
             android:textColor="@color/white"
             />
@@ -162,9 +162,10 @@
             android:text="Select Icon"
             android:fontFamily="@font/balooda2"
             app:layout_constraintTop_toBottomOf="@id/edLayTurnOff"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
             />
 
         <androidx.recyclerview.widget.RecyclerView
