--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -36,7 +36,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgBack"
             android:layout_marginLeft="15dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="@font/balooda2"
             android:textColor="@color/white"
             android:maxLines="1"
