--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                 android:gravity="left"
                 app:layout_constraintStart_toEndOf="@id/profileImage"
                 app:layout_constraintTop_toTopOf="parent"
-                android:textSize="23dp"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:fontFamily="@font/balooda2"
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:text="20:08\nDhaka, Bangladesh"
                     android:padding="10dp"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     />
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="24° C"
                     android:padding="10dp"
-                    android:textSize="25dp"
+                    android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="@id/tvDate"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:drawableStart="@drawable/baseline_cloud_queue_24"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:text="Room"
                     app:layout_constraintTop_toBottomOf="@id/tvDate"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:fontFamily="@font/balooda2"
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:text="Device"
                     app:layout_constraintTop_toBottomOf="@id/recyclerRoom"
-                    android:textSize="22dp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:fontFamily="@font/balooda2"
