--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".bnav.SettingsFragment"
-    android:background="@color/lightBlack">
+    android:background="@color/theme1">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
+        android:text="Settings ...!"
         android:gravity="center"
         android:textColor="@color/white"/>
 
