--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -49,7 +49,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/bed_solid_full"
+                    android:src="@drawable/baseline_bed"
                     android:padding="20dp"
                     app:tint="@color/lightBlack"
                     android:layout_marginTop="10dp"/>
