--- a/app/src/main/res/layout/item_room2.xml
+++ b/app/src/main/res/layout/item_room2.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardCornerRadius="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
 
         >
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,10 +30,11 @@
                 android:id="@+id/imgRoom2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/bed_solid_full"
-                android:tint="@color/white"
+                android:src="@drawable/baseline_bed"
+                app:tint="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
             <TextView
                 android:id="@+id/tvRoomName"
                 android:layout_width="wrap_content"
@@ -41,8 +44,9 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/imgRoom2"
-                android:textSize="20dp"
-                android:layout_marginLeft="15dp"/>
+                android:textSize="20sp"
+                android:layout_marginLeft="15dp"
+                app:layout_constraintTop_toTopOf="parent"/>
             <TextView
                 android:id="@+id/tvRoomDevices"
                 android:layout_width="wrap_content"
@@ -60,7 +64,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/baseline_three_dots"
-                android:tint="@color/white"
+                app:tint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
