--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,20 +20,20 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileImage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_launcher_background"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/icon"
                 app:civ_border_width="1dp"
                 app:civ_border_color="#FFFFFF"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginLeft="40dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome,\nTajim"
+                android:text="Make Home\nSmart"
                 android:gravity="left"
                 app:layout_constraintStart_toEndOf="@id/profileImage"
                 app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/balooda2"
                 android:lineSpacingExtra="-10dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="20dp"
                 />
 
 
